# unify-datasets

./: .gitignore  pyproject.toml
configs/: phase1_supcon_raw.toml  phase2_lda.toml  phase3_full.toml
src/dfp_embed/: data.py  eval.py  loss.py  model.py  sampler.py  train.py
supcon-embedding/: pyproject.toml
supcon-embedding/configs/: A_paul_cns_nolda.toml  A_paul_dfp_lda.toml  D_joint.toml
supcon-embedding/scripts/: debug_training.py  inspect_data.py  run_experiment.py  run_experiment.sh
supcon-embedding/src/supcon/: data.py  eval.py  loss.py  model.py  train.py
