[project]
name = "dfp-embed"
version = "0.1.0"
description = "DFP0395 drug phenotypic embedding — SupCon on spike feature table"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.6",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "pandas>=2.0",
    "tomli>=2.0",
]

[project.scripts]
dfp-train = "dfp_embed.train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dfp_embed"]
