[project]
name = "supcon-embedding"
version = "0.1.0"
description = "SupCon embedding experiment: separate vs joint training"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.6",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "webdataset>=0.2.86",
    "tomli>=2.0",
    "pandas>=3.0.1",
]

[project.scripts]
supcon-train = "supcon.train:main"
supcon-eval = "supcon.eval:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/supcon"]
